# darkroom-blend

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  blender_manifest.toml  darkroom-data.blend  keymap.py  library.py  operators.py  properties.py  states.py  ui.py
src/core/: __init__.py  object_move.py
